2008-04-25  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18628: SQUIRRELFISH: need to support recursion limit
        <https://bugs.webkit.org/show_bug.cgi?id=18628>

        More bounds checking.

        * VM/Machine.cpp:
        (KJS::Machine::execute):
        * VM/RegisterFile.cpp:
        (KJS::RegisterFile::growBuffer):
        * VM/RegisterFile.h:

2008-04-25  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - fix signal catching magic
        
        The signal handlers are restored to _exit but are only set when
        running under run-javascriptcore-tests. fprintf from a signal
        handler is not safe.

        * kjs/testkjs.cpp:
        (main):
        (parseArguments):
        * tests/mozilla/jsDriver.pl:

2008-04-25  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Bug 18732: SQUIRRELFISH: exceptions thrown by native constructors are ignored
        <https://bugs.webkit.org/show_bug.cgi?id=18732>

        Fixes another regression test.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):

2008-04-25  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Bug 18728: SQUIRRELFISH: invalid regular expression constants should throw exceptions
        <https://bugs.webkit.org/show_bug.cgi?id=18728>

        Fixes another regression test.

        * kjs/nodes.cpp:
        (KJS::RegExpNode::emitCode):

2008-04-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Geoffrey Garen.

        Bug 18735: SQUIRRELFISH: closures are sometimes given an incorrect 'this' value when called
        <https://bugs.webkit.org/show_bug.cgi?id=18735>

        The overloaded toThisObject method was not copied over to JSActivation.

        Fixes two regression tests.

        * kjs/JSActivation.cpp:
        (KJS::JSActivation::toThisObject):
        * kjs/JSActivation.h:

2008-04-24  Geoffrey Garen  <ggaren@apple.com>
